--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "ts-node src/index.ts",
     "dev": "nodemon src/index.ts",
     "update-database": "node ../update_database.js",
-    "download-images": "ts-node src/scripts/downloadImages.ts"
+    "download-images": "ts-node src/scripts/downloadImages.ts",
+    "simulate-webhook": "ts-node src/scripts/simulateWebhook.ts"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
@@ -18,7 +19,10 @@
     "express": "^4.18.2",
     "express-rate-limit": "^8.2.1",
     "firebase-admin": "^13.6.0",
-    "node-cache": "^5.1.2"
+    "helmet": "^8.1.0",
+    "node-cache": "^5.1.2",
+    "stripe": "^20.3.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
